# asset-rs

./: Cargo.toml  README.md
asset/: Cargo.toml
asset/src/: builder.rs  dir.rs  file.rs  lib.rs  macros.rs  types.rs
builder/: Cargo.toml
builder/src/: lib.rs
example/: Cargo.toml  build.rs
example/assets/: test.txt  test3.txt
example/assets/data/: test1.txt
example/src/: main.rs
